schema/testdata/errors/permission_attribute_invalid_args.keel
model Person {
    actions {
        get getPerson(id)
    }

    //expect-error:17:21:AttributeArgumentError:@permission requires all arguments to be named, for example @permission(roles: [MyRole])
    //expect-error:5:16:AttributeArgumentError:required argument 'actions' missing
    //expect-error:5:16:AttributeArgumentError:@permission requires either the 'expressions' or 'roles' argument to be provided
    @permission(true)
}
